src/test/ui/traits/assoc-type-in-superbad.stderr
error[E0271]: type mismatch resolving `<std::vec::IntoIter<i32> as Iterator>::Item == u32`
  --> $DIR/assoc-type-in-superbad.rs:12:16
   |
LL |     type Key = u32;
   |                ^^^ expected `i32`, found `u32`
   | 
  ::: $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     type Item = I::Item;
   |          ---- type mismatch with `u32` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
